Portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-django-app
  template:
    metadata:
      labels:
        app: my-django-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: my-django-app
        image: pavelkostyuk/portfolio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
