Portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx # Ensure it's in the same namespace as the Ingress controller
spec:
  rules:
    - host: 165.227.165.97
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-django-app-service
                port:
                  number: 8000
